    to raise if a generative method were called
    after from_statement() were called.
    [ticket:2199].  Also in 0.6.9.

- sql
  - Fixed two subtle bugs involving column 
    correspondence in a selectable,
    one with the same labeled subquery repeated, the other
    when the label has been "grouped" and 
    loses itself.  Affects [ticket:2188].

- schema
  - Fixed bug whereby adaptation of old append_ddl_listener()
    function was passing unexpected **kw through 
    to the Table event.   Table gets no kws, the MetaData
    event in 0.6 would get "tables=somecollection",
    this behavior is preserved.  [ticket:2206]

  - Fixed bug where "autoincrement" detection on 
    Table would fail if the type had no "affinity"
    value, in particular this would occur when using 
    the UUID example on the site that uses TypeEngine
    as the "impl".

  - Added an improved repr() to TypeEngine objects
    that will only display constructor args which
    are positional or kwargs that deviate
    from the default.  [ticket:2209]

- engine
  - Context manager provided by Connection.begin()
    will issue rollback() if the commit() fails,
    not just if an exception occurs.

  - Use urllib.parse_qsl() in Python 2.6 and above,
    no deprecation warning about cgi.parse_qsl()
    [ticket:1682]

  - Added mixin class sqlalchemy.ext.DontWrapMixin.
    User-defined exceptions of this type are never
    wrapped in StatementException when they 
    occur in the context of a statement 
    execution.

  - StatementException wrapping will display the
    original exception class in the message.  

  - Failures on connect which raise dbapi.Error
    will forward the error to dialect.is_disconnect()
    and set the "connection_invalidated" flag if 
    the dialect knows this to be a potentially
    "retryable" condition.  Only Oracle ORA-01033
    implemented for now.  [ticket:2201]

- postgresql
  - Added new "postgresql_ops" argument to 